--- a/qure_ai_problem_2.ipynb
+++ b/qure_ai_problem_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1XkmpXhBIkw-AlHeAqDGTe30akzbjAPvo",
-      "authorship_tag": "ABX9TyPtipM4Hud1ppTlyqMG9dK8",
+      "authorship_tag": "ABX9TyPHBQI1GsSTAHdgeu3KTL9y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,6 +28,29 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/AbhiRishi96/qure_ai_problems.git"
+      ],
+      "metadata": {
+        "id": "a07MJ2NcRFFH",
+        "outputId": "819560d5-bf85-4c15-adb3-e64ff055b8e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: destination path 'qure_ai_problems' already exists and is not an empty directory.\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## IMPORT REQUIRED LIBRARIES & PROVIDING FILE PATHS"
@@ -46,20 +69,20 @@
       "metadata": {
         "id": "gtkoL4nO5OIt"
       },
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "id": "jHP6RfxO3DU7"
       },
       "outputs": [],
       "source": [
-        "df_energy = pd.read_excel(r'/content/drive/MyDrive/Qure_ai/Question2/Energy_Indicators.xls')\n",
-        "df_sciem = pd.read_excel(r'/content/drive/MyDrive/Qure_ai/Question2/scimagojr_country_rank_1996-2021.xlsx')\n",
-        "df_gdp = pd.read_csv('/content/drive/MyDrive/Qure_ai/Question2/API_NY_GDP_MKTP_CD_DS2_en_csv_v2_4701247.csv', header=2)"
+        "df_energy = pd.read_excel(r'/content/qure_ai_problems/Problem_2/Energy_Indicators.xls')\n",
+        "df_sciem = pd.read_excel(r'/content/qure_ai_problems/Problem_2/scimagojr_country_rank_1996-2021.xlsx')\n",
+        "df_gdp = pd.read_csv('/content/qure_ai_problems/Problem_2/API_NY_GDP_MKTP_CD_DS2_en_csv_v2_4701247.csv', header=2)"
       ]
     },
     {
@@ -80,7 +103,7 @@
       "metadata": {
         "id": "CjUyKvCVQ8s7"
       },
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -111,7 +134,7 @@
       "metadata": {
         "id": "aN0BaSbgSSX2"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -127,7 +150,7 @@
       "metadata": {
         "id": "zKggg8LSStpW"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -141,7 +164,7 @@
       "metadata": {
         "id": "0jMuloP6S7xn"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -167,7 +190,7 @@
       "metadata": {
         "id": "83J-_Zk-T4jW"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -188,7 +211,7 @@
       "metadata": {
         "id": "bYsRgtTnUJ7q"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -210,7 +233,7 @@
       "metadata": {
         "id": "vMVv_1f1Uve9"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -222,7 +245,7 @@
       "metadata": {
         "id": "o5JxG3fgVLZ-"
       },
-      "execution_count": 11,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -245,7 +268,7 @@
       "metadata": {
         "id": "8N6mgQWOVYJ8"
       },
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -259,9 +282,9 @@
           "height": 736
         },
         "id": "42iyRxcDV47q",
-        "outputId": "d5f4343d-3f12-422b-c5e6-be60683e47ce"
+        "outputId": "61911ae5-ef90-471e-fb27-029012c312f4"
       },
-      "execution_count": 13,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +400,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fa188559-d47a-4d9b-a1db-94c95e644fcd\">\n",
+              "  <div id=\"df-5ea088ad-aec6-4b28-864d-ad738fb46e78\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -791,7 +814,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fa188559-d47a-4d9b-a1db-94c95e644fcd')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5ea088ad-aec6-4b28-864d-ad738fb46e78')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -842,12 +865,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fa188559-d47a-4d9b-a1db-94c95e644fcd button.colab-df-convert');\n",
+              "          document.querySelector('#df-5ea088ad-aec6-4b28-864d-ad738fb46e78 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fa188559-d47a-4d9b-a1db-94c95e644fcd');\n",
+              "          const element = document.querySelector('#df-5ea088ad-aec6-4b28-864d-ad738fb46e78');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -870,9 +893,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 17
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_final.to_csv('/content/qure_ai_problems/Problem_2/' + 'cleaned_report.csv')"
+      ],
+      "metadata": {
+        "id": "H183Z-TWRl7E"
+      },
+      "execution_count": 18,
+      "outputs": []
     }
   ]
 }
