--- a/qure_ai_problem_3.ipynb
+++ b/qure_ai_problem_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1juvMWjUJWZD13AGuq5loL8qSXux7OXv_",
-      "authorship_tag": "ABX9TyNCSr4Ts5xtVU4L3+iOXD4O",
+      "authorship_tag": "ABX9TyOMoyQ4mknH55I8a9O3tXLz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,36 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/AbhiRishi96/qure_ai_problems/blob/main/qure_ai_problem_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/AbhiRishi96/qure_ai_problems.git"
+      ],
+      "metadata": {
+        "id": "iA1af-2XTDxm",
+        "outputId": "6df1d213-f500-4d19-919b-d2f1759800e7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'qure_ai_problems'...\n",
+            "remote: Enumerating objects: 208, done.\u001b[K\n",
+            "remote: Counting objects: 100% (126/126), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (77/77), done.\u001b[K\n",
+            "remote: Total 208 (delta 50), reused 93 (delta 43), pack-reused 82\u001b[K\n",
+            "Receiving objects: 100% (208/208), 200.96 MiB | 25.71 MiB/s, done.\n",
+            "Resolving deltas: 100% (65/65), done.\n",
+            "Checking out files: 100% (125/125), done.\n"
+          ]
+        }
       ]
     },
     {
@@ -62,7 +92,7 @@
       "metadata": {
         "id": "qF5YHBgPGcyf"
       },
-      "execution_count": 181,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -75,15 +105,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bggat7VCENW8",
-        "outputId": "dafec5a9-8e8f-47df-b6e0-9095369170c1"
+        "outputId": "8408528c-7fdf-41fa-b14b-435be8433c13"
       },
-      "execution_count": 182,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "WARNING:easyocr.easyocr:CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n"
+            "WARNING:easyocr.easyocr:CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+            "WARNING:easyocr.easyocr:Downloading detection model, please wait. This may take several minutes depending upon your network connection.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Progress: |██████████████████████████████████████████████████| 100.0% Complete"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:easyocr.easyocr:Downloading recognition model, please wait. This may take several minutes depending upon your network connection.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Progress: |██████████████████████████████████████████████████| 100.0% Complete"
           ]
         }
       ]
@@ -100,12 +152,12 @@
     {
       "cell_type": "code",
       "source": [
-        "file = \"/content/drive/MyDrive/Qure_ai/Question3/Data_Eng_assignment.pdf\""
+        "file = \"/content/qure_ai_problems/Problem_3/input/Data_Eng_assignment.pdf\""
       ],
       "metadata": {
         "id": "00YpYcCnp2j9"
       },
-      "execution_count": 183,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -132,16 +184,16 @@
         "    #load it to PIL\n",
         "    image = Image.open(io.BytesIO(image_bytes))\n",
         "    #save it to local disk\n",
-        "    image.save(open(f\"/content/drive/MyDrive/Qure_ai/Question3/\" + \"extracted_image.png\", \"wb\"))"
+        "    image.save(open(f\"/content/qure_ai_problems/Problem_3/output/\" + \"extracted_image.png\", \"wb\"))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EXkxnrzOgYQC",
-        "outputId": "9e533862-a3d5-4b9e-e6d7-dd548fb9ff48"
+        "outputId": "1fa8ae82-82c2-4a4a-a9ab-1e0f56b43711"
       },
-      "execution_count": 184,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,12 +216,12 @@
     {
       "cell_type": "code",
       "source": [
-        "path_to_image = '/content/drive/MyDrive/Qure_ai/Question3/extracted_image.png'"
+        "path_to_image = '/content/qure_ai_problems/Problem_3/output/extracted_image.png'"
       ],
       "metadata": {
         "id": "i0Qcml-PSFi2"
       },
-      "execution_count": 185,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -182,7 +234,7 @@
       "metadata": {
         "id": "Ldpxj2HGGsaV"
       },
-      "execution_count": 186,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -203,7 +255,7 @@
       "metadata": {
         "id": "MYKk7w1PWbpJ"
       },
-      "execution_count": 187,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -220,7 +272,7 @@
       "metadata": {
         "id": "nbj15-ZK5W28"
       },
-      "execution_count": 188,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -235,19 +287,19 @@
       "metadata": {
         "id": "AqUdxunnAP0G"
       },
-      "execution_count": 189,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "### SAVING EXTRACTED DATA FROM IMAGE INTO EXCEL FILE\n",
-        "df_extracted_text.to_excel(f'/content/drive/MyDrive/Qure_ai/Question3/' + 'text_from_image.xlsx', index = False, header = False)"
+        "df_extracted_text.to_excel(f'/content/qure_ai_problems/Problem_3/output/' + 'text_from_image.xlsx', index = False, header = False)"
       ],
       "metadata": {
         "id": "jG_cydIVWofK"
       },
-      "execution_count": 191,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -258,12 +310,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 896
+          "height": 683
         },
         "id": "6Rclm2TR7748",
-        "outputId": "f650e2dc-1891-4f79-85e6-51689231a29a"
+        "outputId": "593d1147-b232-4615-f6c5-b160d51727a3"
       },
-      "execution_count": 190,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +352,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e303c4f2-d9af-4ad6-adec-c7b861c61c2c\">\n",
+              "  <div id=\"df-c8ec19a5-5683-434c-9c0f-a0b5a4c346ac\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -435,7 +487,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e303c4f2-d9af-4ad6-adec-c7b861c61c2c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c8ec19a5-5683-434c-9c0f-a0b5a4c346ac')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -486,12 +538,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e303c4f2-d9af-4ad6-adec-c7b861c61c2c button.colab-df-convert');\n",
+              "          document.querySelector('#df-c8ec19a5-5683-434c-9c0f-a0b5a4c346ac button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e303c4f2-d9af-4ad6-adec-c7b861c61c2c');\n",
+              "          const element = document.querySelector('#df-c8ec19a5-5683-434c-9c0f-a0b5a4c346ac');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -514,7 +566,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 190
+          "execution_count": 14
         }
       ]
     }
