--- a/qure_ai_problem_3.ipynb
+++ b/qure_ai_problem_3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1juvMWjUJWZD13AGuq5loL8qSXux7OXv_",
-      "authorship_tag": "ABX9TyOMoyQ4mknH55I8a9O3tXLz",
+      "authorship_tag": "ABX9TyMtHgvkeW6yhVPicbLqigSM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       ],
       "metadata": {
         "id": "iA1af-2XTDxm",
-        "outputId": "6df1d213-f500-4d19-919b-d2f1759800e7",
+        "outputId": "b2c00a08-986e-4075-cba5-e9a1cd71684d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -46,13 +46,13 @@
           "name": "stdout",
           "text": [
             "Cloning into 'qure_ai_problems'...\n",
-            "remote: Enumerating objects: 208, done.\u001b[K\n",
-            "remote: Counting objects: 100% (126/126), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (77/77), done.\u001b[K\n",
-            "remote: Total 208 (delta 50), reused 93 (delta 43), pack-reused 82\u001b[K\n",
-            "Receiving objects: 100% (208/208), 200.96 MiB | 25.71 MiB/s, done.\n",
-            "Resolving deltas: 100% (65/65), done.\n",
-            "Checking out files: 100% (125/125), done.\n"
+            "remote: Enumerating objects: 218, done.\u001b[K\n",
+            "remote: Counting objects: 100% (136/136), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (87/87), done.\u001b[K\n",
+            "remote: Total 218 (delta 55), reused 93 (delta 43), pack-reused 82\u001b[K\n",
+            "Receiving objects: 100% (218/218), 200.97 MiB | 39.18 MiB/s, done.\n",
+            "Resolving deltas: 100% (70/70), done.\n",
+            "Checking out files: 100% (126/126), done.\n"
           ]
         }
       ]
@@ -73,10 +73,73 @@
         "!pip install easyocr"
       ],
       "metadata": {
-        "id": "eMvMhbIQvazj"
+        "id": "eMvMhbIQvazj",
+        "outputId": "94573bed-d44a-4a23-9b6f-22957beeb0ec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting PyMuPDF\n",
+            "  Downloading PyMuPDF-1.21.1-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (14.0 MB)\n",
+            "\u001b[K     |████████████████████████████████| 14.0 MB 33.6 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: Pillow in /usr/local/lib/python3.8/dist-packages (7.1.2)\n",
+            "Installing collected packages: PyMuPDF\n",
+            "Successfully installed PyMuPDF-1.21.1\n",
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting easyocr\n",
+            "  Downloading easyocr-1.6.2-py3-none-any.whl (2.9 MB)\n",
+            "\u001b[K     |████████████████████████████████| 2.9 MB 23.2 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: scipy in /usr/local/lib/python3.8/dist-packages (from easyocr) (1.7.3)\n",
+            "Requirement already satisfied: torchvision>=0.5 in /usr/local/lib/python3.8/dist-packages (from easyocr) (0.14.0+cu116)\n",
+            "Requirement already satisfied: scikit-image in /usr/local/lib/python3.8/dist-packages (from easyocr) (0.18.3)\n",
+            "Collecting python-bidi\n",
+            "  Downloading python_bidi-0.4.2-py2.py3-none-any.whl (30 kB)\n",
+            "Requirement already satisfied: torch in /usr/local/lib/python3.8/dist-packages (from easyocr) (1.13.0+cu116)\n",
+            "Requirement already satisfied: Shapely in /usr/local/lib/python3.8/dist-packages (from easyocr) (2.0.0)\n",
+            "Collecting pyclipper\n",
+            "  Downloading pyclipper-1.3.0.post4-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.whl (619 kB)\n",
+            "\u001b[K     |████████████████████████████████| 619 kB 68.4 MB/s \n",
+            "\u001b[?25hCollecting ninja\n",
+            "  Downloading ninja-1.11.1-py2.py3-none-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (145 kB)\n",
+            "\u001b[K     |████████████████████████████████| 145 kB 73.8 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: PyYAML in /usr/local/lib/python3.8/dist-packages (from easyocr) (6.0)\n",
+            "Requirement already satisfied: Pillow in /usr/local/lib/python3.8/dist-packages (from easyocr) (7.1.2)\n",
+            "Collecting opencv-python-headless<=4.5.4.60\n",
+            "  Downloading opencv_python_headless-4.5.4.60-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (47.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 47.6 MB 110 kB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.8/dist-packages (from easyocr) (1.21.6)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.8/dist-packages (from torchvision>=0.5->easyocr) (2.23.0)\n",
+            "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.8/dist-packages (from torchvision>=0.5->easyocr) (4.4.0)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.8/dist-packages (from python-bidi->easyocr) (1.15.0)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.8/dist-packages (from requests->torchvision>=0.5->easyocr) (2.10)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.8/dist-packages (from requests->torchvision>=0.5->easyocr) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/dist-packages (from requests->torchvision>=0.5->easyocr) (2022.12.7)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.8/dist-packages (from requests->torchvision>=0.5->easyocr) (3.0.4)\n",
+            "Requirement already satisfied: matplotlib!=3.0.0,>=2.0.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image->easyocr) (3.2.2)\n",
+            "Requirement already satisfied: networkx>=2.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image->easyocr) (2.8.8)\n",
+            "Requirement already satisfied: imageio>=2.3.0 in /usr/local/lib/python3.8/dist-packages (from scikit-image->easyocr) (2.9.0)\n",
+            "Requirement already satisfied: PyWavelets>=1.1.1 in /usr/local/lib/python3.8/dist-packages (from scikit-image->easyocr) (1.4.1)\n",
+            "Requirement already satisfied: tifffile>=2019.7.26 in /usr/local/lib/python3.8/dist-packages (from scikit-image->easyocr) (2022.10.10)\n",
+            "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image->easyocr) (3.0.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image->easyocr) (2.8.2)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image->easyocr) (1.4.4)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.8/dist-packages (from matplotlib!=3.0.0,>=2.0.0->scikit-image->easyocr) (0.11.0)\n",
+            "Installing collected packages: python-bidi, pyclipper, opencv-python-headless, ninja, easyocr\n",
+            "  Attempting uninstall: opencv-python-headless\n",
+            "    Found existing installation: opencv-python-headless 4.6.0.66\n",
+            "    Uninstalling opencv-python-headless-4.6.0.66:\n",
+            "      Successfully uninstalled opencv-python-headless-4.6.0.66\n",
+            "Successfully installed easyocr-1.6.2 ninja-1.11.1 opencv-python-headless-4.5.4.60 pyclipper-1.3.0.post4 python-bidi-0.4.2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -105,7 +168,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bggat7VCENW8",
-        "outputId": "8408528c-7fdf-41fa-b14b-435be8433c13"
+        "outputId": "087f2eef-f448-4ef6-d2bb-e083f8cdca5d"
       },
       "execution_count": 4,
       "outputs": [
@@ -179,8 +242,6 @@
         "    #extract the image bytes\n",
         "    base_image = pdf_file.extract_image(xref)\n",
         "    image_bytes = base_image[\"image\"]\n",
-        "    #get the image extension\n",
-        "    image_ext = base_image[\"ext\"]\n",
         "    #load it to PIL\n",
         "    image = Image.open(io.BytesIO(image_bytes))\n",
         "    #save it to local disk\n",
@@ -191,9 +252,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EXkxnrzOgYQC",
-        "outputId": "1fa8ae82-82c2-4a4a-a9ab-1e0f56b43711"
+        "outputId": "818cf749-dbb8-42db-bf34-0bd8d37eaf2d"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -221,7 +282,7 @@
       "metadata": {
         "id": "i0Qcml-PSFi2"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -234,7 +295,7 @@
       "metadata": {
         "id": "Ldpxj2HGGsaV"
       },
-      "execution_count": 9,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -255,7 +316,7 @@
       "metadata": {
         "id": "MYKk7w1PWbpJ"
       },
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -264,7 +325,6 @@
         "### RENAMING AND DELETING WRONG INTERPRETED DATA\n",
         "df_extracted_text = df_extracted_text.replace({'#ITaxable': '#/Taxable',\n",
         "                                               'Test Product _': 'Test Product 2 (Service)',\n",
-        "                                               '(Service': '1',\n",
         "                                               'P1ooo': 'P1000',\n",
         "                                               'Test Product': 'Test Product 1'})\n",
         "df_extracted_text = df_extracted_text.drop([45])"
@@ -272,7 +332,7 @@
       "metadata": {
         "id": "nbj15-ZK5W28"
       },
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -287,7 +347,7 @@
       "metadata": {
         "id": "AqUdxunnAP0G"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -299,7 +359,7 @@
       "metadata": {
         "id": "jG_cydIVWofK"
       },
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -310,12 +370,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 683
+          "height": 896
         },
         "id": "6Rclm2TR7748",
-        "outputId": "593d1147-b232-4615-f6c5-b160d51727a3"
+        "outputId": "ed23ab11-0ef5-4f3f-e1e1-2c78c24e38ca"
       },
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +412,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c8ec19a5-5683-434c-9c0f-a0b5a4c346ac\">\n",
+              "  <div id=\"df-d1f7b219-3f8e-49ef-ac85-642079886193\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -487,7 +547,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c8ec19a5-5683-434c-9c0f-a0b5a4c346ac')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d1f7b219-3f8e-49ef-ac85-642079886193')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -538,12 +598,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c8ec19a5-5683-434c-9c0f-a0b5a4c346ac button.colab-df-convert');\n",
+              "          document.querySelector('#df-d1f7b219-3f8e-49ef-ac85-642079886193 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c8ec19a5-5683-434c-9c0f-a0b5a4c346ac');\n",
+              "          const element = document.querySelector('#df-d1f7b219-3f8e-49ef-ac85-642079886193');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -566,7 +626,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 17
         }
       ]
     }
